--- a/src/main.css
+++ b/src/main.css
@@ -5,21 +5,21 @@
 @layer {
     @font-face {
         font-family: 'questrial';
-        src: font-url('./assets/Questrial-Regular.ttf') format('truetype');
+        src: url('./assets/fonts/Questrial-Regular.ttf') format('truetype');
     }
 
     @font-face {
         font-family: 'din-next-lt-pro-bold';
-        src: font-url('./assets/DINNextLTPro-Bold.otf') format('opentype');
+        src: url('./assets/fonts/DINNextLTPro-Bold.otf') format('opentype');
     }
 
     @font-face {
         font-family: 'din-next-lt-pro-light';
-        src: font-url('./assets/DINNextLTPro-Light.otf') format('opentype');
+        src: url('./assets/fonts/DINNextLTPro-Light.otf') format('opentype');
     }
 
     @font-face {
         font-family: 'inter-variable';
-        src: font-url('./assets/inter-variable.ttf') format('truetype');
+        src: url('./assets/fonts/inter-variable.ttf') format('truetype');
     }
 }
